desativando cacheamento pelo google

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 	<head>
+		<meta name=”googlebot” content=”noarchive” />
 		<title>Mudança de endereço - em breve novidades em DomDeSer.com.br</title>
 		<style type="text/css">
 			*{margin:0;padding:0;outiline:none;}
