--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 	<head>
+		<meta http-equiv="refresh" content="0;url=http://www.domdeser.com.br">
 		<meta name=”googlebot” content=”noarchive” />
-		<title>Mudança de endereço - em breve novidades em DomDeSer.com.br</title>
+		<title>Site desativado - redirecionando para DomDeSer.com.br</title>
 		<style type="text/css">
 			*{margin:0;padding:0;outiline:none;}
 			body{background-color:#EFEFFF;}
@@ -10,8 +11,8 @@
 		</style>
 	</head>
 	<body>
-		<p><em>Site temporariamente indisponível</em></p>
-		<p>Em <strong>Janeiro</strong>, novidades no novo endereço<br /> <a href="http://www.domdeser.com.br" target="_blank"><strong>DomDeSer.com.br</strong></a></p>
+		<p><em>Site desativado</em></p>
+		<p>Redirecionando para <a href="http://www.domdeser.com.br"><strong>DomDeSer.com.br</strong></a> . . . </p>
 		<script>
 		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
