--- a/index.html
+++ b/index.html
@@ -1,26 +1,26 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 	<head>
-		<meta http-equiv="refresh" content="0;url=http://www.domdeser.com.br">
 		<meta name=”googlebot” content=”noarchive” />
-		<title>Site desativado - redirecionando para DomDeSer.com.br</title>
+		<link rel="canonical" href="http://lukedimension.com.br" />
+		<title>Este site mudou para lukedimension.com.br, redirecionando...</title>
 		<style type="text/css">
 			*{margin:0;padding:0;outiline:none;}
 			body{background-color:#EFEFFF;}
 			p{margin:40px auto 0;width:480px;font-family:Arial;font-size:16px;line-height:21px;text-align:center;}
 		</style>
+		<meta http-equiv="refresh" content="0; url=http://lukedimension.com.br">
 	</head>
-	<body>
-		<p><em>Site desativado</em></p>
-		<p>Redirecionando para <a href="http://www.domdeser.com.br"><strong>DomDeSer.com.br</strong></a> . . . </p>
+	<body>	
+		<p><strong>Este site mudou para <a href="http://lukedimension.com.br">lukedimension.com.br</a></strong></p>
+		<p>Redirecionando...</p>
 		<script>
-		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-		  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-		  ga('create', 'UA-46726613-1', 'luminosodesenho.com.br');
-		  ga('send', 'pageview');
+			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+			})(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+			ga('create', 'UA-46726613-2', 'domdeser.com.br');
+			ga('send', 'pageview');
 		</script>
 	</body>
 </html>
