--- a/index.html
+++ b/index.html
@@ -1,18 +1,14 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 	<head>
-		<meta name=”googlebot” content=”noarchive” />
-		<link rel="canonical" href="http://lukedimension.com.br" />
-		<title>Este site mudou para lukedimension.com.br, redirecionando...</title>
+		<title>Lucas da Silva Soares - Em breve...</title>
 		<style type="text/css">
 			*{margin:0;padding:0;outiline:none;}
 			body{background-color:#EFEFFF;}
 			p{margin:40px auto 0;width:480px;font-family:Arial;font-size:16px;line-height:21px;text-align:center;}
 		</style>
-		<meta http-equiv="refresh" content="0; url=http://lukedimension.com.br">
 	</head>
 	<body>	
-		<p><strong>Este site mudou para <a href="http://lukedimension.com.br">lukedimension.com.br</a></strong></p>
-		<p>Redirecionando...</p>
+		Em breve...
 	</body>
 </html>
