--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<meta charset="utf-8" />
 		<meta name="author" content="Lucas da Silva Soares" />
 		<meta name="contact" content="lucasdasilvasoares@hotmail.com" />
-		<meta name="description" content="Desenvolvedor Front-End em São Paulo, SP. Criação e desenvolvimento de sites em HTML5, CSS3 e JavaScript.">
+		<meta name="description" content="Desenvolvedor Front-End em São Paulo, SP. Criação e desenvolvimento de sites em HTML5, CSS3 e JavaScript." />
 		<meta name="keywords" content="front, end, portfolio, desenvolvedor, developer, website, site, design, freelance, web development, html, html5, css3, css, javascript, responsive, ux, studio, art, lucas, silva, soares" />
 		<!-- Facebook -->
 		<meta property="og:locale" content="pt_BR">
@@ -17,7 +17,7 @@
 		<meta property="og:description" content="Desenvolvedor Front-End em São Paulo, SP. Criação e desenvolvimento de sites em HTML5, CSS3 e JavaScript."/>
 		<meta property="og:url" content="http://lucasdasilvasoares.github.io"/>
 		<meta property="og:type" content="website"/>
-		<meta property="og:image" content="http://www.lucasdasilvasoares.com.br/images/lucas-silva-soares-foto-front-end.jpg">
+		<meta property="og:image" content="http://lucasdasilvasoares.github.io/images/lucas-silva-soares-foto-front-end.jpg">
 		<meta property="og:image:type" content="image/jpeg">
 		<meta property="og:image:width" content="120">
 		<meta property="og:image:height" content="120">
@@ -364,6 +364,7 @@
 					</section>
 					-->
 				</div>
+				
 			</div>
 		
 			<div id="guardaLinhaVerde" class="guardaLinhas">
