--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 		<meta property="og:description" content="Desenvolvedor Front-End em São Paulo, SP. Criação e desenvolvimento de sites em HTML5, CSS3 e JavaScript."/>
 		<meta property="og:url" content="http://lucasdasilvasoares.github.io"/>
 		<meta property="og:type" content="website"/>
-		<meta property="og:image" content="http://lucasdasilvasoares.github.io/images/lucas-silva-soares-foto-front-end.jpg">
-		<meta property="og:image:type" content="image/jpeg">
-		<meta property="og:image:width" content="120">
-		<meta property="og:image:height" content="120">
+		<meta property="og:image" content="http://lucasdasilvasoares.github.io/images/brasao-lucas-silva-soares-front-end-web.png">
+		<meta property="og:image:type" content="image/png">
+		<meta property="og:image:width" content="200">
+		<meta property="og:image:height" content="200">
 		<!-- CSS -->
 		<link rel="stylesheet" href="./styleGeral.css" />
 		<!-- JavaScript -->
