--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 	<head>
-		<title>Lucas da Silva Soares - Desenvolvedor Front End</title>
+		<title>Lucas da Silva Soares - Desenvolvedor Front-End</title>
 		<!-- Favicon -->
 		<link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon" />
 		<!-- Meta -->
@@ -9,10 +9,10 @@
 		<meta name="author" content="Lucas da Silva Soares" />
 		<meta name="contact" content="lucasdasilvasoares@hotmail.com" />
 		<meta name="description" content="Desenvolvedor Front-End em São Paulo, SP. Criação e desenvolvimento de sites em HTML5, CSS3 e JavaScript." />
-		<meta name="keywords" content="front, end, portfolio, desenvolvedor, developer, website, site, design, freelance, web development, html, html5, css3, css, javascript, responsive, ux, studio, art, lucas, silva, soares" />
+		<meta name="keywords" content="front-end, front, end, portfolio, desenvolvedor, developer, website, site, design, freelance, web development, html, html5, css3, css, javascript, responsive, ux, studio, art, lucas, silva, soares" />
 		<!-- Facebook -->
 		<meta property="og:locale" content="pt_BR">
-		<meta property="og:title" content="Lucas da Silva Soares - Desenvolvedor Front End"/>
+		<meta property="og:title" content="Lucas da Silva Soares - Desenvolvedor Front-End"/>
 		<meta property="og:site_name" content="Lucas da Silva Soares"/>
 		<meta property="og:description" content="Desenvolvedor Front-End em São Paulo, SP. Criação e desenvolvimento de sites em HTML5, CSS3 e JavaScript."/>
 		<meta property="og:url" content="http://lucasdasilvasoares.github.io"/>
@@ -37,7 +37,7 @@
 					<div id="guardaCabecalhoTopo">
 						<div id="cabecalhoTopo">
 							<div id="logoTopo">
-								<a href="./" title="Lucas da Silva Soares - Desenvolvedor Front End"><span><span>L</span><span>ucas da Silva Soares</span></span><span id="logoDesc">Desenvolvedor Front End</span></a>
+								<a href="./" title="Lucas da Silva Soares - Desenvolvedor Front-End"><span><span>L</span><span>ucas da Silva Soares</span></span><span id="logoDesc">Desenvolvedor Front-End</span></a>
 							</div>
 							<ul id="escudosTopo">
 								<li><a target="_blank" id="escudoHtml5" href="https://developer.mozilla.org/pt-BR/docs/Web/HTML" title="Sobre o HTML5"></a></li>
@@ -52,9 +52,9 @@
 								<li><a href="#home" title="Página Inicial"><img alt="Página Inicial" src="./images/pagina-inicial-casa.png" /></a></li>
 								<li><a href="#habilidades">Habilidades</a></li>
 								<li><a href="#formacao">Formação</a></li>
-								<li><a href="#experiencia">Experiência</a></li>
+								<li><a href="#experiencia">Experiência</a></li><!--
 								<li><a href="#portfolio">Portfolio</a></li>
-								<li><a href="#contato">Contato</a></li>
+								<li><a href="#contato">Contato</a></li>-->
 							</ul>
 						</div>
 					</div>
@@ -76,17 +76,17 @@
 				<div id="content">
 					<section id="home">
 						<ul>
-							<li><a href="#habilidades"><span>Habilidades</span><span class="icone iconeHabilidades"></span><span class="luzMarcado"></span></a></li>
-							<li><a id="bgVermelho" class="quadrado" href="#formacao"><span>Formação</span><span class="icone iconeFormacao"></span><span class="luzMarcado"></span></a></li>
-							<li><a id="bgAmarelo" class="quadrado" href="#experiencia"><span>Experiência</span><span class="icone iconeExperiencia"></span><span class="luzMarcado"></span></a></li>
-							<li><a id="bgAzul" href="#portfolio"><span>Portfolio</span><span class="icone iconePortfolio"></span><span class="luzMarcado"></span></a></li>
-							<li><a href="#contato"><span>Contato</span><span class="icone iconeContato"></span><span class="luzMarcado"></span></a></li>
-						</ul>
+							<li><a href="#habilidades"><span>Habilidades</span><span class="iconePb iconeHabilidades"></span><span class="luzMarcado"></span></a></li>
+							<li><a id="bgVermelho" class="quadrado" href="#formacao"><span>Formação</span><span class="iconePb iconeFormacao"></span><span class="luzMarcado"></span></a></li>
+							<li><a id="bgAmarelo" class="quadrado" href="#experiencia"><span>Experiência</span><span class="iconePb iconeExperiencia"></span><span class="luzMarcado"></span></a></li>
+							<!--<li><a id="bgAzul" href="#portfolio"><span>Portfolio</span><span class="iconePb iconePortfolio"></span><span class="luzMarcado"></span></a></li>
+							<li><a href="#contato"><span>Contato</span><span class="iconePb iconeContato"></span><span class="luzMarcado"></span></a></li>
+						--></ul>
 					</section>
 					<section id="habilidades">
 						<div class="separaConteudo">
 							<h1>Habilidades</h1>
-							<img alt="Lucas da Silva Soares - Desenvolvedor Front End" title="Lucas da Silva Soares - Desenvolvedor Front End" src="./images/lucas-silva-soares-foto-front-end.jpg" />
+							<img alt="Lucas da Silva Soares - Desenvolvedor Front-End" title="Lucas da Silva Soares - Desenvolvedor Front-End" src="./images/lucas-silva-soares-foto-front-end.jpg" />
 							<p>
 								Atuação na área de Web em São Paulo / SP desde 2011. Criação de códigos HTML semânticamente corretos buscando os melhores resultados para o SEO. 
 								Otimização do CSS evitando 'id's desnecessários e código duplicado. Implementação de interação e animações através do JavaScript como banners rotativos, 
@@ -345,15 +345,105 @@
 							</ul>
 						</div>
 					</section>
-					<!--
 					<section id="formacao">
 						<h1>Formação</h1>
-						<p>texto texto texto texto texto</p>
+						<div class="separaConteudo">
+							<div class="guardaBox">
+								<div class="boxCinza">
+									<hgroup>
+										<h2>Pós-graduação - Senac</h2>
+										<h3>Especialização em Animação</h3>
+									</hgroup>
+									<p>01/2013-12/2014</p>
+									<span class="boxIcone" id="iconeAnimacao"></span>
+								</div>
+								<div class="boxBranco">
+									<a href="http://www.sp.senac.br/jsp/default.jsp?newsID=DYNAMIC,oracle.br.dataservers.CourseDataServer,selectCourse2&course=11481&template=397.dwt&testeira=303&unit=SCI" 
+									title="Senac - Pós graduação em Animação"
+									target="_blank"><img alt="Senac - Pós graduação em Animação" src="./images/animacao-senac.png" /></a>
+								</div>
+							</div>
+						</div>						
+						<div class="separaConteudo">
+							<div class="guardaBox">
+								<div class="boxCinza">
+									<hgroup>
+										<h2>Ensino Superior - Uninove</h2>
+										<h3>Tecnólogo em Sistemas para Internet</h3>
+									</hgroup>
+									<p>08/2010-12/2012</p>
+									<span class="boxIcone" id="iconeInternet"></span>
+								</div>
+								<div class="boxBranco">
+									<a href="http://www.uninove.br/Paginas/ShowGraduacao.aspx?SEQ=53" 
+									title="Uninove - Sistemas para Internet"
+									target="_blank"><img alt="Uninove - Sistemas para Internet" src="./images/sistemas-internet-uninove.png" /></a>
+								</div>
+							</div>
+						</div>
 					</section>
 					<section id="experiencia">
-						<h1>Experiência</h1>
-						<p>texto texto texto texto texto</p>
+						<h1>Experiência</h1>			
+						<div class="separaConteudo">
+							<div class="guardaBox">
+								<div class="boxCinza">
+									<hgroup>
+										<h2>Agência Foster - WPP Company</h2>
+										<h3>Desenvolvedor Front-End Jr.</h3>
+									</hgroup>
+									<p class="dataExp">2011-2014</p>
+									<p class="infoExp">
+										Desenvolvimento e manutenção de páginas Web através dos conhecimentos em programação Web. 
+										Aplicação de treinamentos e atendimento ao cliente.
+									</p>
+									<span class="iconePb boxIcone iconeExperiencia"></span>
+								</div>
+								<div class="boxBranco boxMedio">
+									<a href="http://foster.com.br/" 
+									title="Agência Foster - WPP Company"
+									target="_blank"><img alt="Agência Foster - WPP Company" src="./images/front-end-foster-wpp.png" /></a>
+								</div>
+							</div>
+						</div>	
+						<div class="separaConteudo">
+							<div class="guardaBox">
+								<div class="boxCinza">
+									<hgroup>
+										<h2>Dell Computadores</h2>
+										<h3>Analista de Suporte Jr.</h3>
+									</hgroup>
+									<p class="dataExp">2011</p>
+									<p class="infoExp">Suporte de primeiro nível via telefone aos clientes da Dell diagnosticando problemas e solucionando os casos.</p>
+									<span class="iconePb boxIcone iconeExperiencia"></span>
+								</div>
+								<div class="boxBranco boxMedio">
+									<a href="http://www.dell.com.br/" 
+									title="Dell Computadores"
+									target="_blank"><img alt="Dell Computadores" src="./images/analista-suporte-dell-computadores.png" /></a>
+								</div>
+							</div>
+						</div>
+						<div class="separaConteudo">
+							<div class="guardaBox">
+								<div class="boxCinza">
+									<hgroup>
+										<h2>Autônomo</h2>
+										<h3>Web Designer</h3>
+									</hgroup>
+									<p class="dataExp">2009-2011</p>
+									<p class="infoExp">
+										Desenvolvimento de Web Sites personalizados para profissionais liberais, autônomos, 
+										pequenas e médias empresas com foco na qualidade e bom atendimento.
+									</p>
+									<span class="iconePb boxIcone iconeExperiencia"></span>
+								</div>
+								<div class="boxBranco boxMedio">
+									<span class="iconePb iconeExperiencia expSemImg"></span>
+								</div>
+							</div>
+						</div>
 					</section>
+					<!--
 					<section id="portfolio">
 						<h1>Portfolio</h1>
 						<p>texto texto texto texto texto</p>
@@ -376,6 +466,6 @@
 		<!--
 		<script type="text/javascript" src="prlxScrl.js"></script>
 		<script type="text/javascript" src="scriptGeral.js"></script>
-		-->
+		 -->
 	</body>
 </html>
