--- a/index.html
+++ b/index.html
@@ -11,16 +11,16 @@
 		<meta name="description" content="Desenvolvedor Front-End em São Paulo, SP. Criação e desenvolvimento de sites em HTML5, CSS3 e JavaScript." />
 		<meta name="keywords" content="front-end, front, end, portfolio, desenvolvedor, developer, website, site, design, freelance, web development, html, html5, css3, css, javascript, responsive, ux, studio, art, lucas, silva, soares" />
 		<!-- Facebook -->
-		<meta property="og:locale" content="pt_BR">
+		<meta property="og:locale" content="pt_BR" />
 		<meta property="og:title" content="Lucas da Silva Soares - Desenvolvedor Front-End"/>
 		<meta property="og:site_name" content="Lucas da Silva Soares"/>
 		<meta property="og:description" content="Desenvolvedor Front-End em São Paulo, SP. Criação e desenvolvimento de sites em HTML5, CSS3 e JavaScript."/>
 		<meta property="og:url" content="http://lucasdasilvasoares.github.io"/>
 		<meta property="og:type" content="website"/>
-		<meta property="og:image" content="http://lucasdasilvasoares.github.io/images/brasao-lucas-silva-soares-front-end-web.png">
+		<meta property="og:image" content="http://lucasdasilvasoares.github.io/images/brasao-lucas-silva-soares-front-end-web.png" />
 		<meta property="og:image:type" content="image/png">
-		<meta property="og:image:width" content="200">
-		<meta property="og:image:height" content="200">
+		<meta property="og:image:width" content="200" />
+		<meta property="og:image:height" content="200" />
 		<!-- CSS -->
 		<link rel="stylesheet" href="./styleGeral.css" />
 		<!-- JavaScript -->
