--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<meta property="og:url" content="http://lucasdasilvasoares.github.io"/>
 		<meta property="og:type" content="website"/>
 		<meta property="og:image" content="http://lucasdasilvasoares.github.io/images/brasao-lucas-silva-soares-front-end-web.png" />
-		<meta property="og:image:type" content="image/png">
+		<meta property="og:image:type" content="image/png" />
 		<meta property="og:image:width" content="200" />
 		<meta property="og:image:height" content="200" />
 		<!-- CSS -->
