# atualização meta tags facebook

--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 		<meta name="author" content="Lucas da Silva Soares" />
 		<meta name="contact" content="lucasdasilvasoares@hotmail.com" />
 		<meta name="description" content="Desenvolvedor Front-End em São Paulo, SP. Criação e desenvolvimento de sites em HTML5, CSS3 e JavaScript." />
-		<meta name="keywords" content="front-end, front, end, portfolio, desenvolvedor, developer, website, site, design, freelance, web development, html, html5, css3, css, javascript, responsive, ux, studio, art, lucas, silva, soares" />
+		<meta name="keywords" content="front-end, front, end, desenvolvedor, developer, web development, portfolio, website, site, design, freelance, html, html5, css3, css, javascript, responsive, ux, studio, art, lucas, silva, soares" />
 		<!-- Facebook -->
 		<meta property="og:locale" content="pt_BR" />
-		<meta property="og:title" content="Lucas da Silva Soares - Desenvolvedor Front-End"/>
+		<meta property="og:title" content="Lucas da Silva Soares" />
 		<meta property="og:site_name" content="Lucas da Silva Soares"/>
 		<meta property="og:description" content="Desenvolvedor Front-End em São Paulo, SP. Criação e desenvolvimento de sites em HTML5, CSS3 e JavaScript."/>
 		<meta property="og:url" content="http://lucasdasilvasoares.github.io"/>
