# atualização no conteúdo

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<meta property="og:description" content="Desenvolvedor Front-End em São Paulo, SP. Criação e desenvolvimento de sites em HTML5, CSS3 e JavaScript."/>
 		<meta property="og:url" content="http://lucasdasilvasoares.github.io"/>
 		<meta property="og:type" content="website"/>
-		<meta property="og:image" content="http://lucasdasilvasoares.github.io/images/brasao-lucas-silva-soares-front-end-web.png" />
+		<meta property="og:image" content="http://lucasdasilvasoares.github.io/images/brasao-lucas-soares-front-end-developer.png" />
 		<meta property="og:image:type" content="image/png" />
 		<meta property="og:image:width" content="200" />
 		<meta property="og:image:height" content="200" />
@@ -52,8 +52,8 @@
 								<li><a href="#home" title="Página Inicial"><img alt="Página Inicial" src="./images/pagina-inicial-casa.png" /></a></li>
 								<li><a href="#habilidades">Habilidades</a></li>
 								<li><a href="#formacao">Formação</a></li>
-								<li><a href="#experiencia">Experiência</a></li><!--
-								<li><a href="#portfolio">Portfolio</a></li>
+								<li><a href="#experiencia">Experiência</a></li>
+								<li><a href="#portfolio">Portfolio</a></li><!--
 								<li><a href="#contato">Contato</a></li>-->
 							</ul>
 						</div>
@@ -79,8 +79,8 @@
 							<li><a href="#habilidades"><span>Habilidades</span><span class="iconePb iconeHabilidades"></span><span class="luzMarcado"></span></a></li>
 							<li><a id="bgVermelho" class="quadrado" href="#formacao"><span>Formação</span><span class="iconePb iconeFormacao"></span><span class="luzMarcado"></span></a></li>
 							<li><a id="bgAmarelo" class="quadrado" href="#experiencia"><span>Experiência</span><span class="iconePb iconeExperiencia"></span><span class="luzMarcado"></span></a></li>
-							<!--<li><a id="bgAzul" href="#portfolio"><span>Portfolio</span><span class="iconePb iconePortfolio"></span><span class="luzMarcado"></span></a></li>
-							<li><a href="#contato"><span>Contato</span><span class="iconePb iconeContato"></span><span class="luzMarcado"></span></a></li>
+							<li><a id="bgAzul" href="#portfolio"><span>Portfolio</span><span class="iconePb iconePortfolio"></span><span class="luzMarcado"></span></a></li>
+							<!--<li><a href="#contato"><span>Contato</span><span class="iconePb iconeContato"></span><span class="luzMarcado"></span></a></li>
 						--></ul>
 					</section>
 					<section id="habilidades">
@@ -351,7 +351,12 @@
 							<div class="guardaBox">
 								<div class="boxCinza">
 									<hgroup>
-										<h2>Pós-graduação - Senac</h2>
+										<h2>
+											Pós-graduação - 
+											<a 
+											target="_blank" 
+											href="http://www.sp.senac.br/jsp/default.jsp?newsID=DYNAMIC,oracle.br.dataservers.CourseDataServer,selectCourse2&course=11481&template=397.dwt&testeira=303&unit=SCI" >Senac</a>
+										</h2>
 										<h3>Especialização em Animação</h3>
 									</hgroup>
 									<p>01/2013-12/2014</p>
@@ -368,7 +373,7 @@
 							<div class="guardaBox">
 								<div class="boxCinza">
 									<hgroup>
-										<h2>Ensino Superior - Uninove</h2>
+										<h2>Ensino Superior - <a target="_blank" href="http://www.uninove.br/Paginas/ShowGraduacao.aspx?SEQ=53">Uninove</a></h2>
 										<h3>Tecnólogo em Sistemas para Internet</h3>
 									</hgroup>
 									<p>08/2010-12/2012</p>
@@ -388,7 +393,7 @@
 							<div class="guardaBox">
 								<div class="boxCinza">
 									<hgroup>
-										<h2>Agência Foster - WPP Company</h2>
+										<h2><a href="http://foster.com.br/" target="_blank">Agência Foster</a> - WPP Company</h2>
 										<h3>Desenvolvedor Front-End Jr.</h3>
 									</hgroup>
 									<p class="dataExp">2011-2014</p>
@@ -409,7 +414,7 @@
 							<div class="guardaBox">
 								<div class="boxCinza">
 									<hgroup>
-										<h2>Dell Computadores</h2>
+										<h2><a target="_blank" href="http://www.dell.com.br/">Dell</a> Computadores</h2>
 										<h3>Analista de Suporte Jr.</h3>
 									</hgroup>
 									<p class="dataExp">2011</p>
@@ -443,14 +448,193 @@
 							</div>
 						</div>
 					</section>
-					<!--
 					<section id="portfolio">
 						<h1>Portfolio</h1>
-						<p>texto texto texto texto texto</p>
+						<div class="separaConteudo">
+							<div class="guardaBox">
+								<div class="boxCinza">
+									<h2>Portfolio <a target="_blank" href="http://lucasdasilvasoares.github.io">Lucas da Silva Soares</a></h2>
+									<h3>Responsabilidades</h3>
+									<ul class="lista">
+										<li>Design</li>
+										<li>User experience</li>
+										<li>Codificação HTML e CSS</li>
+										<li>SEO</li>
+										<li>Parallax com JavaScript puro</li>
+										<li>Otimizar a performance</li>
+										<li>Minificação do HTML, CSS e JS</li>
+										<li>Otimização das imagens (<a target="_blank" href="https://tinypng.com/">Tiny PNG</a>)</li>
+									</ul>
+									<span class="iconePb boxIcone iconePortifolio"></span>
+								</div>
+								<div class="boxBranco boxMaior">									
+									<a href="http://lucasdasilvasoares.github.io" 
+									title="Portfolio Lucas da Silva Soares"
+									target="_blank"><img alt="Portfolio Lucas da Silva Soares" src="./images/lucas-front-end-portfolio.png" /></a>
+								</div>
+							</div>
+						</div>
+						<div class="separaConteudo">
+							<div class="guardaBox">
+								<div class="boxCinza">
+									<h2>Hotsite <br /><a target="_blank" href="http://www.bayerpet.com.br/combinacoes-inteligentes/caes/">Bayer Pet Combinações Inteligentes</a></h2>
+									<h3>Responsabilidades</h3>
+									<ul class="lista">
+										<li>Animações com JS puro</li>
+										<li>Criação da estrutura HTML e CSS</li>
+										<li>Parallax com JS puro</li>
+									</ul>
+									<span class="iconePb boxIcone iconePortifolio"></span>
+								</div>
+								<div class="boxBranco boxMedio">									
+									<a href="http://www.bayerpet.com.br/combinacoes-inteligentes/caes/" 
+									title="Hotsite Bayer Pet Combinações Inteligentes"
+									target="_blank"><img alt="Hotsite Bayer Pet Combinações Inteligentes" src="./images/bayer-portfolio.png" /></a>
+								</div>
+							</div>
+						</div>
+						<div class="separaConteudo">
+							<div class="guardaBox">
+								<div class="boxCinza">
+									<h2>Novo Website <a target="_blank" href="http://www.goodyear.com.br">Goodyear Pneus</a></h2>
+									<h3>Responsabilidades</h3>
+									<ul class="lista">
+										<li>Coordenação da equipe Front-End</li>
+										<li>Template HTML e CSS</li>
+										<li>Analise do SEO</li>
+										<li>Acompanhamento da implementação do Back-End</li>
+										<li>Marcação do menu lateral via script</li>
+										<li>Includes via JavaScript</li>
+										<li>Script da <em><a href="#">linha do tempo</a></em></li>
+										<li>Manutenção</li>
+									</ul>
+									<span class="iconePb boxIcone iconePortifolio"></span>
+								</div>
+								<div class="boxBranco boxMaior">									
+									<a href="http://www.goodyear.com.br"
+									title="Website Goodyear Pneus"
+									target="_blank"><img alt="Website Goodyear Pneus" src="./images/goodyear-portfolio.png" /></a>
+								</div>
+							</div>
+						</div>
+						<div class="separaConteudo">
+							<div class="guardaBox">
+								<div class="boxCinza">
+									<h2>Novo Website <a target="_blank" href="http://www.arcelormittal.com/br/">ArcelorMittal</a></h2>
+									<h3>Responsabilidades</h3>
+									<ul class="lista">
+										<li>Template HTML e CSS</li>
+										<li>Script do menu do topo e lateral</li>
+										<li>Manutenção</li>
+									</ul>
+									<span class="iconePb boxIcone iconePortifolio"></span>
+								</div>
+								<div class="boxBranco boxMedio">									
+									<a href="http://www.arcelormittal.com/br/" 
+									title="Novo Website ArcelorMittal"
+									target="_blank"><img alt="Novo Website ArcelorMittal" src="./images/arcelor-mittal-portfolio.png" /></a>
+								</div>
+							</div>
+						</div>
+						<div class="separaConteudo">
+							<div class="guardaBox">
+								<div class="boxCinza">
+									<h2>Aplicativo para o Facebook<br /> <a target="_blank" href="https://www.facebook.com/MundoWeleda/app_200274523438038">Weleda - Sua Rosa</a></h2>
+									<h3>Responsabilidades</h3>
+									<ul class="lista">
+										<li>Criação e implementação dos scripts JavaScript e PHP</li>
+										<li>Criação do HTML e CSS</li>
+										<li>Criação do XML com os dados</li>
+										<li>Resgate dos dados via AJAX</li>
+										<li>Animação das rosas frame a frame</li>
+									</ul>
+									<span class="iconePb boxIcone iconePortifolio"></span>
+								</div>
+								<div class="boxBranco boxMaior">									
+									<a href="https://www.facebook.com/MundoWeleda/app_200274523438038" 
+									title="Aplicativo para o Facebook: Weleda - Sua Rosa"
+									target="_blank"><img alt="Aplicativo para o Facebook: Weleda - Sua Rosa" src="./images/weleda-portfolio.png" /></a>
+								</div>
+							</div>
+						</div>
+						<div class="separaConteudo">
+							<div class="guardaBox">
+								<div class="boxCinza">
+									<h2>Doodle Google "<a target="_blank" href="./doodle-google-muybridge">182º aniversário de Eadweard J. Muybridge</a>"</h2>
+									<h3>Responsabilidades</h3>
+									<ul class="lista">
+										<li>Replicar o <em><a href="https://www.google.com/doodles/eadweard-j-muybridges-182nd-birthday" target="_blank">Doodle original</a></em></li>
+										<li>Não inspencionar o código original</li>
+										<li>Desenvolver com JavaScript puro</li>
+									</ul>
+									<span class="iconePb boxIcone iconePortifolio"></span>
+								</div>
+								<div class="boxBranco boxMedio">									
+									<a href="./doodle-google-muybridge/" 
+									title='Doodle Google "182º aniversário de Eadweard J. Muybridge"'
+									target="_blank"><img alt='Doodle Google "182º aniversário de Eadweard J. Muybridge"' src="./images/google-portfolio.png" /></a>
+								</div>
+							</div>
+						</div>
+						<div class="separaConteudo">
+							<div class="guardaBox">
+								<div class="boxCinza">
+									<h2>Banner <a target="_blank" href="http://www.danonebabyprofissionais.com.br/home/">Danone Early Life Nutrition</a></h2>
+									<h3>Responsabilidades</h3>
+									<ul class="lista">
+										<li>Desenvolver a estrutura HTML, CSS e JS</li>
+										<li>Criar a interação através do slider</li>
+										<li>Parallax</li>
+									</ul>
+									<span class="iconePb boxIcone iconePortifolio"></span>
+								</div>
+								<div class="boxBranco boxMedio">									
+									<a href="http://www.danonebabyprofissionais.com.br/home/" 
+									title="Banner Danone Early Life Nutrition"
+									target="_blank"><img alt="Banner Danone Early Life Nutrition" src="./images/danone-nutrition-portfolio.png" /></a>
+								</div>
+							</div>
+						</div>
+						<div class="separaConteudo">
+							<div class="guardaBox">
+								<div class="boxCinza">
+									<h2><a target="_blank" href="http://www.hospitalsiriolibanes.org.br/Paginas/default.aspx">Hospital Sírio-Libanês</a></h2>
+									<h3>Responsabilidades</h3>
+									<ul class="lista">
+										<li>Manutenção</li>
+									</ul>
+									<span class="iconePb boxIcone iconePortifolio"></span>
+								</div>
+								<div class="boxBranco">									
+									<a href="http://www.hospitalsiriolibanes.org.br/Paginas/default.aspx" 
+									title="Hospital Sírio-Libanês"
+									target="_blank"><img alt="Hospital Sírio-Libanês" src="./images/hospital-sirio-libanes-portfolio.png" /></a>
+								</div>
+							</div>
+						</div>
+						<div class="separaConteudo">
+							<div class="guardaBox">
+								<div class="boxCinza">
+									<h2><a target="_blank" href="http://www.metro.sp.gov.br/">Metrô SP</a></h2>
+									<h3>Responsabilidades</h3>
+									<ul class="lista">
+										<li>Manutenção</li>
+									</ul>
+									<span class="iconePb boxIcone iconePortifolio"></span>
+								</div>
+								<div class="boxBranco">									
+									<a href="http://www.metro.sp.gov.br/" 
+									title="Metrô SP"
+									target="_blank"><img alt="Metrô SP" src="./images/metro-portfolio.png" /></a>
+								</div>
+							</div>
+						</div>
 					</section>
+					<!--
 					<section id="contato">
 						<h1>Contato</h1>
 						<p>texto texto texto texto texto</p>
+						<a href="https://www.linkedin.com/in/lucasdasilvasoares">linkedin.com/in/lucasdasilvasoares</a>
 					</section>
 					-->
 				</div>
