--- a/index.html
+++ b/index.html
@@ -46,17 +46,17 @@
 							</ul>                                                                                                                
 						</div>
 					</div>
-					<div id="guardaCabecalhoMenu">
-						<div>
+					<div id="guardaCabecalhoNav">
+						<nav>
 							<ul>
 								<li><a href="#home" title="Página Inicial"><img alt="Página Inicial" src="./images/pagina-inicial-casa.png" /></a></li>
 								<li><a href="#habilidades">Habilidades</a></li>
 								<li><a href="#formacao">Formação</a></li>
 								<li><a href="#experiencia">Experiência</a></li>
-								<li><a href="#portfolio">Portfolio</a></li><!--
-								<li><a href="#contato">Contato</a></li>-->
+								<li><a href="#portfolio">Portfolio</a></li>
+								<!--<li><a href="#contato">Contato</a></li>-->
 							</ul>
-						</div>
+						</nav>
 					</div>
 					<div id="sombraCabecalho"></div>
 				</header>
@@ -80,8 +80,8 @@
 							<li><a id="bgVermelho" class="quadrado" href="#formacao"><span>Formação</span><span class="iconePb iconeFormacao"></span><span class="luzMarcado"></span></a></li>
 							<li><a id="bgAmarelo" class="quadrado" href="#experiencia"><span>Experiência</span><span class="iconePb iconeExperiencia"></span><span class="luzMarcado"></span></a></li>
 							<li><a id="bgAzul" href="#portfolio"><span>Portfolio</span><span class="iconePb iconePortfolio"></span><span class="luzMarcado"></span></a></li>
-							<!--<li><a href="#contato"><span>Contato</span><span class="iconePb iconeContato"></span><span class="luzMarcado"></span></a></li>
-						--></ul>
+							<!--<li><a href="#contato"><span>Contato</span><span class="iconePb iconeContato"></span><span class="luzMarcado"></span></a></li>-->
+						</ul>
 					</section>
 					<section id="habilidades">
 						<div class="separaConteudo">
@@ -458,7 +458,8 @@
 									<ul class="lista">
 										<li>Design</li>
 										<li>User experience</li>
-										<li>Codificação HTML e CSS</li>
+										<li>Google Analytics</li>
+										<li>Codificação HTML5 e CSS3</li>
 										<li>SEO</li>
 										<li>Parallax com JavaScript puro</li>
 										<li>Otimizar a performance</li>
@@ -467,7 +468,7 @@
 									</ul>
 									<span class="iconePb boxIcone iconePortifolio"></span>
 								</div>
-								<div class="boxBranco boxMaior">									
+								<div class="boxBranco boxGigante">									
 									<a href="http://lucasdasilvasoares.github.io" 
 									title="Portfolio Lucas da Silva Soares"
 									target="_blank"><img alt="Portfolio Lucas da Silva Soares" src="./images/lucas-front-end-portfolio.png" /></a>
@@ -546,7 +547,7 @@
 										<li>Criação do HTML e CSS</li>
 										<li>Criação do XML com os dados</li>
 										<li>Resgate dos dados via AJAX</li>
-										<li>Animação das rosas frame a frame</li>
+										<li>Script da Animação das rosas</li>
 									</ul>
 									<span class="iconePb boxIcone iconePortifolio"></span>
 								</div>
@@ -633,7 +634,6 @@
 					<!--
 					<section id="contato">
 						<h1>Contato</h1>
-						<p>texto texto texto texto texto</p>
 						<a href="https://www.linkedin.com/in/lucasdasilvasoares">linkedin.com/in/lucasdasilvasoares</a>
 					</section>
 					-->
