--- a/index.html
+++ b/index.html
@@ -460,6 +460,7 @@
 									<ul class="lista">
 										<li>Design</li>
 										<li>User experience</li>
+										<li>Utilizar menos que 200 Kb</li>
 										<li>Google Analytics</li>
 										<li>Codificação HTML5 e CSS3</li>
 										<li>SEO</li>
