--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 		<link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon" />
 		<!-- Meta -->
 		<meta charset="utf-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="author" content="Lucas da Silva Soares" />
 		<meta name="contact" content="lucasdasilvasoares@hotmail.com" />
 		<meta name="description" content="Desenvolvedor Front-End em São Paulo, SP. Criação e desenvolvimento de sites em HTML5, CSS3 e JavaScript." />
