--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
+
+
 <!DOCTYPE html>
 <html lang="pt-BR">
 	<head>
+		<meta charset="utf-8" />
+		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+		<meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0" name="viewport" />
 		<title>Lucas da Silva Soares - Desenvolvedor Front-End</title>
 		<!-- Favicon -->
 		<link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon" />
 		<!-- Meta -->
-		<meta charset="utf-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta content='width=device-width, initial-scale=0.5, maximum-scale=0.5' name='viewport' />
 		<meta name="author" content="Lucas da Silva Soares" />
 		<meta name="contact" content="lucasdasilvasoares@hotmail.com" />
 		<meta name="description" content="Desenvolvedor Front-End em São Paulo, SP. Criação e desenvolvimento de sites em HTML5, CSS3 e JavaScript." />
