# ajustando código das imagens
imagens transferidas para outro domínio

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Lucas da Silva Soares - Desenvolvedor Front-End</title>
 		<!-- Favicon -->
-		<link rel="shortcut icon" href="./images/favicon.ico" type="image/x-icon" />
+		<link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
 		<!-- Meta -->
 		<meta charset="utf-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -51,7 +51,7 @@
 					<div id="guardaCabecalhoNav">
 						<nav>
 							<ul>
-								<li><a href="#home" title="Página Inicial"><img alt="Página Inicial" src="./images/pagina-inicial-casa.png" /></a></li>
+								<li><a href="#home" title="Página Inicial"><img alt="Página Inicial" src="http://images.lucasanimador.com.br/pagina-inicial-casa.png" /></a></li>
 								<li><a href="#habilidades">Habilidades</a></li>
 								<li><a href="#formacao">Formação</a></li>
 								<li><a href="#experiencia">Experiência</a></li>
@@ -88,7 +88,7 @@
 					<section id="habilidades">
 						<div class="separaConteudo">
 							<h1>Habilidades</h1>
-							<img alt="Lucas da Silva Soares - Desenvolvedor Front-End" title="Lucas da Silva Soares - Desenvolvedor Front-End" src="./images/lucas-silva-soares-foto-front-end.jpg" />
+							<img alt="Lucas da Silva Soares - Desenvolvedor Front-End" title="Lucas da Silva Soares - Desenvolvedor Front-End" src="http://images.lucasanimador.com.br/lucas-silva-soares-foto-front-end.jpg" />
 							<p>
 								Atuação na área de Web em São Paulo / SP desde 2011. Criação de códigos HTML semânticamente corretos buscando os melhores resultados para o SEO. 
 								Otimização do CSS evitando 'id's desnecessários e código duplicado. Implementação de interação e animações através do JavaScript como banners rotativos, 
@@ -367,7 +367,7 @@
 								<div class="boxBranco">
 									<a href="http://www.sp.senac.br/jsp/default.jsp?newsID=DYNAMIC,oracle.br.dataservers.CourseDataServer,selectCourse2&course=11481&template=397.dwt&testeira=303&unit=SCI" 
 									title="Senac - Pós graduação em Animação"
-									target="_blank"><img alt="Senac - Pós graduação em Animação" src="./images/animacao-senac.png" /></a>
+									target="_blank"><img alt="Senac - Pós graduação em Animação" src="http://images.lucasanimador.com.br/animacao-senac.png" /></a>
 								</div>
 							</div>
 						</div>						
@@ -384,7 +384,7 @@
 								<div class="boxBranco">
 									<a href="http://www.uninove.br/Paginas/ShowGraduacao.aspx?SEQ=53" 
 									title="Uninove - Sistemas para Internet"
-									target="_blank"><img alt="Uninove - Sistemas para Internet" src="./images/sistemas-internet-uninove.png" /></a>
+									target="_blank"><img alt="Uninove - Sistemas para Internet" src="http://images.lucasanimador.com.br/sistemas-internet-uninove.png" /></a>
 								</div>
 							</div>
 						</div>
@@ -408,7 +408,7 @@
 								<div class="boxBranco boxMedio">
 									<a href="http://foster.com.br/" 
 									title="Agência Foster - WPP Company"
-									target="_blank"><img alt="Agência Foster - WPP Company" src="./images/front-end-foster-wpp.png" /></a>
+									target="_blank"><img alt="Agência Foster - WPP Company" src="http://images.lucasanimador.com.br/front-end-foster-wpp.png" /></a>
 								</div>
 							</div>
 						</div>	
@@ -426,7 +426,7 @@
 								<div class="boxBranco boxMedio">
 									<a href="http://www.dell.com.br/" 
 									title="Dell Computadores"
-									target="_blank"><img alt="Dell Computadores" src="./images/analista-suporte-dell-computadores.png" /></a>
+									target="_blank"><img alt="Dell Computadores" src="http://images.lucasanimador.com.br/analista-suporte-dell-computadores.png" /></a>
 								</div>
 							</div>
 						</div>
@@ -474,7 +474,7 @@
 								<div class="boxBranco boxGigante">									
 									<a href="http://lucasdasilvasoares.github.io" 
 									title="Portfolio Lucas da Silva Soares"
-									target="_blank"><img alt="Portfolio Lucas da Silva Soares" src="./images/lucas-front-end-portfolio.png" /></a>
+									target="_blank"><img alt="Portfolio Lucas da Silva Soares" src="http://images.lucasanimador.com.br/lucas-front-end-portfolio.png" /></a>
 								</div>
 							</div>
 						</div>
@@ -493,7 +493,7 @@
 								<div class="boxBranco boxMedio">									
 									<a href="http://www.bayerpet.com.br/combinacoes-inteligentes/caes/" 
 									title="Hotsite Bayer Pet Combinações Inteligentes"
-									target="_blank"><img alt="Hotsite Bayer Pet Combinações Inteligentes" src="./images/bayer-portfolio.png" /></a>
+									target="_blank"><img alt="Hotsite Bayer Pet Combinações Inteligentes" src="http://images.lucasanimador.com.br/bayer-portfolio.png" /></a>
 								</div>
 							</div>
 						</div>
@@ -517,7 +517,7 @@
 								<div class="boxBranco boxMaior">									
 									<a href="http://www.goodyear.com.br"
 									title="Website Goodyear Pneus"
-									target="_blank"><img alt="Website Goodyear Pneus" src="./images/goodyear-portfolio.png" /></a>
+									target="_blank"><img alt="Website Goodyear Pneus" src="http://images.lucasanimador.com.br/goodyear-portfolio.png" /></a>
 								</div>
 							</div>
 						</div>
@@ -536,7 +536,7 @@
 								<div class="boxBranco boxMedio">									
 									<a href="http://www.arcelormittal.com/br/" 
 									title="Novo Website ArcelorMittal"
-									target="_blank"><img alt="Novo Website ArcelorMittal" src="./images/arcelor-mittal-portfolio.png" /></a>
+									target="_blank"><img alt="Novo Website ArcelorMittal" src="http://images.lucasanimador.com.br/arcelor-mittal-portfolio.png" /></a>
 								</div>
 							</div>
 						</div>
@@ -557,7 +557,7 @@
 								<div class="boxBranco boxMaior">									
 									<a href="https://www.facebook.com/MundoWeleda/app_200274523438038" 
 									title="Aplicativo para o Facebook: Weleda - Sua Rosa"
-									target="_blank"><img alt="Aplicativo para o Facebook: Weleda - Sua Rosa" src="./images/weleda-portfolio.png" /></a>
+									target="_blank"><img alt="Aplicativo para o Facebook: Weleda - Sua Rosa" src="http://images.lucasanimador.com.br/weleda-portfolio.png" /></a>
 								</div>
 							</div>
 						</div>
@@ -576,7 +576,7 @@
 								<div class="boxBranco boxMedio">									
 									<a href="./doodle-google-muybridge/" 
 									title='Doodle Google "182º aniversário de Eadweard J. Muybridge"'
-									target="_blank"><img alt='Doodle Google "182º aniversário de Eadweard J. Muybridge"' src="./images/google-portfolio.png" /></a>
+									target="_blank"><img alt='Doodle Google "182º aniversário de Eadweard J. Muybridge"' src="http://images.lucasanimador.com.br/google-portfolio.png" /></a>
 								</div>
 							</div>
 						</div>
@@ -595,7 +595,7 @@
 								<div class="boxBranco boxMedio">									
 									<a href="http://www.danonebabyprofissionais.com.br/home/" 
 									title="Banner Danone Early Life Nutrition"
-									target="_blank"><img alt="Banner Danone Early Life Nutrition" src="./images/danone-nutrition-portfolio.png" /></a>
+									target="_blank"><img alt="Banner Danone Early Life Nutrition" src="http://images.lucasanimador.com.br/danone-nutrition-portfolio.png" /></a>
 								</div>
 							</div>
 						</div>
@@ -612,7 +612,7 @@
 								<div class="boxBranco">									
 									<a href="http://www.hospitalsiriolibanes.org.br/Paginas/default.aspx" 
 									title="Hospital Sírio-Libanês"
-									target="_blank"><img alt="Hospital Sírio-Libanês" src="./images/hospital-sirio-libanes-portfolio.png" /></a>
+									target="_blank"><img alt="Hospital Sírio-Libanês" src="http://images.lucasanimador.com.br/hospital-sirio-libanes-portfolio.png" /></a>
 								</div>
 							</div>
 						</div>
@@ -629,7 +629,7 @@
 								<div class="boxBranco">									
 									<a href="http://www.metro.sp.gov.br/" 
 									title="Metrô SP"
-									target="_blank"><img alt="Metrô SP" src="./images/metro-portfolio.png" /></a>
+									target="_blank"><img alt="Metrô SP" src="http://images.lucasanimador.com.br/metro-portfolio.png" /></a>
 								</div>
 							</div>
 						</div>
