--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 		<!-- Meta -->
 		<meta charset="utf-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="author" content="Lucas da Silva Soares" />
 		<meta name="contact" content="lucasdasilvasoares@hotmail.com" />
 		<meta name="description" content="Desenvolvedor Front-End em São Paulo, SP. Criação e desenvolvimento de sites em HTML5, CSS3 e JavaScript." />
@@ -17,23 +16,26 @@
 		<meta property="og:title" content="Lucas da Silva Soares" />
 		<meta property="og:site_name" content="Lucas da Silva Soares"/>
 		<meta property="og:description" content="Desenvolvedor Front-End em São Paulo, SP. Criação e desenvolvimento de sites em HTML5, CSS3 e JavaScript."/>
-		<meta property="og:url" content="http://lucasdasilvasoares.github.io"/>
+		<meta property="og:url" content="http://lucasdasilvasoares.github.io" />
 		<meta property="og:type" content="website"/>
 		<meta property="og:image" content="http://lucasdasilvasoares.github.io/images/brasao-lucas-soares-front-end-developer.png" />
 		<meta property="og:image:type" content="image/png" />
-		<meta property="og:image:width" content="200" />
-		<meta property="og:image:height" content="200" />
+		<meta property="og:image:width" content="220" />
+		<meta property="og:image:height" content="220" />
 		<!-- CSS -->
 		<link rel="stylesheet" href="./styleGeral.css" />
 		<!-- JavaScript -->
+		<!--[if lt IE 9]>
 		<script type="text/javascript">
 			document.createElement('header');
+			document.createElement('nav');
 			document.createElement('section');
+			document.createElement('hgroup');
 		</script>
+		<![endif]-->
 	</head>
 	<body>	
-		<div id="guardaTudo">
-		
+		<div id="guardaTudo">		
 			<div id="guardaCabecalho">
 				<header>
 					<div id="guardaCabecalhoTopo">
@@ -51,44 +53,38 @@
 					<div id="guardaCabecalhoNav">
 						<nav>
 							<ul>
-								<li><a href="#home" title="Página Inicial"><img alt="Página Inicial" src="http://images.lucasanimador.com.br/pagina-inicial-casa.png" /></a></li>
+								<li><a href="#home" title="Página Inicial"><img alt="Página Inicial" src="./lucasanimador/images/pagina-inicial-casa.png" /></a></li>
 								<li><a href="#habilidades">Habilidades</a></li>
 								<li><a href="#formacao">Formação</a></li>
 								<li><a href="#experiencia">Experiência</a></li>
 								<li><a href="#portfolio">Portfolio</a></li>
-								<!--<li><a href="#contato">Contato</a></li>-->
+								<li><a href="#contato">Contato</a></li>
 							</ul>
 						</nav>
 					</div>
 					<div id="sombraCabecalho"></div>
 				</header>
-			</div>
-			
-			<div id="guardaLinhasEscudos" class="guardaLinhas">
-				<div class="centralizaLinha">					
-					<div id="linhasEscudos">
-						<div id="linhaHtml5"></div>
-						<div id="linhaCss3"></div>
-						<div id="linhaJs"></div>
-					</div>
+			</div>			
+			<div id="guardaLinhasEscudos">
+				<div>					
+					<div id="linhasEscudos"></div>
 				</div>
-			</div>
-			
+			</div>			
 			<div id="guardaContent">
 				<div id="content">
 					<section id="home">
-						<ul>
-							<li><a href="#habilidades"><span>Habilidades</span><span class="iconePb iconeHabilidades"></span><span class="luzMarcado"></span></a></li>
-							<li><a id="bgVermelho" class="quadrado" href="#formacao"><span>Formação</span><span class="iconePb iconeFormacao"></span><span class="luzMarcado"></span></a></li>
+						<ul id="listaHome">
+							<li><a href="#habilidades"><span>Habilidades</span><span id="iconeHabilidades" class="iconePb"></span><span class="luzMarcado"></span></a></li>
+							<li><a id="bgVermelho" class="quadrado" href="#formacao"><span>Formação</span><span id="iconeFormacao" class="iconePb"></span><span class="luzMarcado"></span></a></li>
 							<li><a id="bgAmarelo" class="quadrado" href="#experiencia"><span>Experiência</span><span class="iconePb iconeExperiencia"></span><span class="luzMarcado"></span></a></li>
-							<li><a id="bgAzul" href="#portfolio"><span>Portfolio</span><span class="iconePb iconePortfolio"></span><span class="luzMarcado"></span></a></li>
-							<!--<li><a href="#contato"><span>Contato</span><span class="iconePb iconeContato"></span><span class="luzMarcado"></span></a></li>-->
+							<li><a id="bgAzul" href="#portfolio"><span>Portfolio</span><span id="iconePortfolio" class="iconePb"></span><span class="luzMarcado"></span></a></li>
+							<li><a href="#contato"><span>Contato</span><span id="iconeContato" class="iconePb"></span><span class="luzMarcado"></span></a></li>
 						</ul>
 					</section>
 					<section id="habilidades">
-						<div class="separaConteudo">
+						<div id="habilidadesResumo" class="separaConteudo">
 							<h1>Habilidades</h1>
-							<img alt="Lucas da Silva Soares - Desenvolvedor Front-End" title="Lucas da Silva Soares - Desenvolvedor Front-End" src="http://images.lucasanimador.com.br/lucas-silva-soares-foto-front-end.jpg" />
+							<img alt="Lucas da Silva Soares - Desenvolvedor Front-End" title="Lucas da Silva Soares - Desenvolvedor Front-End" src="./lucasanimador/images/lucas-silva-soares-foto-front-end.jpg" />
 							<p>
 								Atuação na área de Web em São Paulo / SP desde 2011. Criação de códigos HTML semânticamente corretos buscando os melhores resultados para o SEO. 
 								Otimização do CSS evitando 'id's desnecessários e código duplicado. Implementação de interação e animações através do JavaScript como banners rotativos, 
@@ -241,7 +237,7 @@
 								</li>
 								<li>
 									<div class="boxHabilidade">
-										<span id="skAgnitio"></span>
+										<span></span>
 										<div><span id="nvAgnitio"></span></div>
 									</div>
 									<span>Agnitio</span>
@@ -362,12 +358,12 @@
 										<h3>Especialização em Animação</h3>
 									</hgroup>
 									<p>01/2013-12/2014</p>
-									<span class="boxIcone" id="iconeAnimacao"></span>
+									<span class="boxIcone iconePb" id="iconeAnimacao"></span>
 								</div>
 								<div class="boxBranco">
 									<a href="http://www.sp.senac.br/jsp/default.jsp?newsID=DYNAMIC,oracle.br.dataservers.CourseDataServer,selectCourse2&course=11481&template=397.dwt&testeira=303&unit=SCI" 
 									title="Senac - Pós graduação em Animação"
-									target="_blank"><img alt="Senac - Pós graduação em Animação" src="http://images.lucasanimador.com.br/animacao-senac.png" /></a>
+									target="_blank"><img alt="Senac - Pós graduação em Animação" src="./lucasanimador/images/animacao-senac.png" /></a>
 								</div>
 							</div>
 						</div>						
@@ -379,12 +375,12 @@
 										<h3>Tecnólogo em Sistemas para Internet</h3>
 									</hgroup>
 									<p>08/2010-12/2012</p>
-									<span class="boxIcone" id="iconeInternet"></span>
+									<span class="boxIcone iconePb" id="iconeInternet"></span>
 								</div>
 								<div class="boxBranco">
 									<a href="http://www.uninove.br/Paginas/ShowGraduacao.aspx?SEQ=53" 
 									title="Uninove - Sistemas para Internet"
-									target="_blank"><img alt="Uninove - Sistemas para Internet" src="http://images.lucasanimador.com.br/sistemas-internet-uninove.png" /></a>
+									target="_blank"><img alt="Uninove - Sistemas para Internet" src="./lucasanimador/images/sistemas-internet-uninove.png" /></a>
 								</div>
 							</div>
 						</div>
@@ -408,7 +404,7 @@
 								<div class="boxBranco boxMedio">
 									<a href="http://foster.com.br/" 
 									title="Agência Foster - WPP Company"
-									target="_blank"><img alt="Agência Foster - WPP Company" src="http://images.lucasanimador.com.br/front-end-foster-wpp.png" /></a>
+									target="_blank"><img alt="Agência Foster - WPP Company" src="./lucasanimador/images/front-end-foster-wpp.png" /></a>
 								</div>
 							</div>
 						</div>	
@@ -426,7 +422,7 @@
 								<div class="boxBranco boxMedio">
 									<a href="http://www.dell.com.br/" 
 									title="Dell Computadores"
-									target="_blank"><img alt="Dell Computadores" src="http://images.lucasanimador.com.br/analista-suporte-dell-computadores.png" /></a>
+									target="_blank"><img alt="Dell Computadores" src="./lucasanimador/images/analista-suporte-dell-computadores.png" /></a>
 								</div>
 							</div>
 						</div>
@@ -445,7 +441,7 @@
 									<span class="iconePb boxIcone iconeExperiencia"></span>
 								</div>
 								<div class="boxBranco boxMedio">
-									<span class="iconePb iconeExperiencia expSemImg"></span>
+									<span id="expSemImg" class="iconePb iconeExperiencia"></span>
 								</div>
 							</div>
 						</div>
@@ -460,21 +456,21 @@
 									<ul class="lista">
 										<li>Design</li>
 										<li>User experience</li>
-										<li>Utilizar menos que 200 Kb</li>
 										<li>Google Analytics</li>
 										<li>Codificação HTML5 e CSS3</li>
-										<li>SEO</li>
+										<li>Search Engine Optimization</li>
 										<li>Parallax com JavaScript puro</li>
-										<li>Otimizar a performance</li>
+										<li>Otimização da performance</li>
 										<li>Minificação do HTML, CSS e JS</li>
-										<li>Otimização das imagens (<a target="_blank" href="https://tinypng.com/">Tiny PNG</a>)</li>
+										<li>Otimização das imagens</li>
+										<li>Utilização de <a target="_blank" href="./images/icones-pb-sprite.png">sprites</a></li>
 									</ul>
 									<span class="iconePb boxIcone iconePortifolio"></span>
 								</div>
 								<div class="boxBranco boxGigante">									
 									<a href="http://lucasdasilvasoares.github.io" 
 									title="Portfolio Lucas da Silva Soares"
-									target="_blank"><img alt="Portfolio Lucas da Silva Soares" src="http://images.lucasanimador.com.br/lucas-front-end-portfolio.png" /></a>
+									target="_blank"><img alt="Portfolio Lucas da Silva Soares" src="./lucasanimador/images/lucas-front-end-portfolio.png" /></a>
 								</div>
 							</div>
 						</div>
@@ -493,7 +489,7 @@
 								<div class="boxBranco boxMedio">									
 									<a href="http://www.bayerpet.com.br/combinacoes-inteligentes/caes/" 
 									title="Hotsite Bayer Pet Combinações Inteligentes"
-									target="_blank"><img alt="Hotsite Bayer Pet Combinações Inteligentes" src="http://images.lucasanimador.com.br/bayer-portfolio.png" /></a>
+									target="_blank"><img alt="Hotsite Bayer Pet Combinações Inteligentes" src="./lucasanimador/images/bayer-portfolio.png" /></a>
 								</div>
 							</div>
 						</div>
@@ -517,7 +513,7 @@
 								<div class="boxBranco boxMaior">									
 									<a href="http://www.goodyear.com.br"
 									title="Website Goodyear Pneus"
-									target="_blank"><img alt="Website Goodyear Pneus" src="http://images.lucasanimador.com.br/goodyear-portfolio.png" /></a>
+									target="_blank"><img alt="Website Goodyear Pneus" src="./lucasanimador/images/goodyear-portfolio.png" /></a>
 								</div>
 							</div>
 						</div>
@@ -536,7 +532,7 @@
 								<div class="boxBranco boxMedio">									
 									<a href="http://www.arcelormittal.com/br/" 
 									title="Novo Website ArcelorMittal"
-									target="_blank"><img alt="Novo Website ArcelorMittal" src="http://images.lucasanimador.com.br/arcelor-mittal-portfolio.png" /></a>
+									target="_blank"><img alt="Novo Website ArcelorMittal" src="./lucasanimador/images/arcelor-mittal-portfolio.png" /></a>
 								</div>
 							</div>
 						</div>
@@ -546,7 +542,7 @@
 									<h2>Aplicativo para o Facebook<br /> <a target="_blank" href="https://www.facebook.com/MundoWeleda/app_200274523438038">Weleda - Sua Rosa</a></h2>
 									<h3>Responsabilidades</h3>
 									<ul class="lista">
-										<li>Criação e implementação dos scripts JavaScript e PHP</li>
+										<li>Criação e implementação dos scripts</li>
 										<li>Criação do HTML e CSS</li>
 										<li>Criação do XML com os dados</li>
 										<li>Resgate dos dados via AJAX</li>
@@ -557,7 +553,7 @@
 								<div class="boxBranco boxMaior">									
 									<a href="https://www.facebook.com/MundoWeleda/app_200274523438038" 
 									title="Aplicativo para o Facebook: Weleda - Sua Rosa"
-									target="_blank"><img alt="Aplicativo para o Facebook: Weleda - Sua Rosa" src="http://images.lucasanimador.com.br/weleda-portfolio.png" /></a>
+									target="_blank"><img alt="Aplicativo para o Facebook: Weleda - Sua Rosa" src="./lucasanimador/images/weleda-portfolio.png" /></a>
 								</div>
 							</div>
 						</div>
@@ -576,7 +572,7 @@
 								<div class="boxBranco boxMedio">									
 									<a href="./doodle-google-muybridge/" 
 									title='Doodle Google "182º aniversário de Eadweard J. Muybridge"'
-									target="_blank"><img alt='Doodle Google "182º aniversário de Eadweard J. Muybridge"' src="http://images.lucasanimador.com.br/google-portfolio.png" /></a>
+									target="_blank"><img alt='Doodle Google "182º aniversário de Eadweard J. Muybridge"' src="./lucasanimador/images/google-portfolio.png" /></a>
 								</div>
 							</div>
 						</div>
@@ -595,7 +591,7 @@
 								<div class="boxBranco boxMedio">									
 									<a href="http://www.danonebabyprofissionais.com.br/home/" 
 									title="Banner Danone Early Life Nutrition"
-									target="_blank"><img alt="Banner Danone Early Life Nutrition" src="http://images.lucasanimador.com.br/danone-nutrition-portfolio.png" /></a>
+									target="_blank"><img alt="Banner Danone Early Life Nutrition" src="./lucasanimador/images/danone-nutrition-portfolio.png" /></a>
 								</div>
 							</div>
 						</div>
@@ -612,7 +608,7 @@
 								<div class="boxBranco">									
 									<a href="http://www.hospitalsiriolibanes.org.br/Paginas/default.aspx" 
 									title="Hospital Sírio-Libanês"
-									target="_blank"><img alt="Hospital Sírio-Libanês" src="http://images.lucasanimador.com.br/hospital-sirio-libanes-portfolio.png" /></a>
+									target="_blank"><img alt="Hospital Sírio-Libanês" src="./lucasanimador/images/hospital-sirio-libanes-portfolio.png" /></a>
 								</div>
 							</div>
 						</div>
@@ -629,30 +625,56 @@
 								<div class="boxBranco">									
 									<a href="http://www.metro.sp.gov.br/" 
 									title="Metrô SP"
-									target="_blank"><img alt="Metrô SP" src="http://images.lucasanimador.com.br/metro-portfolio.png" /></a>
+									target="_blank"><img alt="Metrô SP" src="./lucasanimador/images/metro-portfolio.png" /></a>
 								</div>
 							</div>
 						</div>
 					</section>
-					<!--
 					<section id="contato">
-						<h1>Contato</h1>
-						<a href="https://www.linkedin.com/in/lucasdasilvasoares">linkedin.com/in/lucasdasilvasoares</a>
+						<h1>Contato</h1>		
+						<p>Em breve...</p>
+						<!--
+						<div id="guardaFormContato">
+							<form method="POST" action="http://form.lucasanimador.com.br/">
+								<div>
+									<input id="campoNome" name="nomeContato" type="text" />
+								</div>
+								<span id="erroNome">* por gentileza preencha esse campo</span>
+								<div>
+									<input id="campoEmail" name="emailContato" type="text" />
+								</div>
+								<span id="erroEmail">* por gentileza insira um e-mail válido</span>
+								<div>
+									<textarea id="campoMsg" name="msgContato"></textarea>
+								</div>
+								<span id="erroMsg">* por gentileza digite a sua mensagem</span>
+								<input type="submit" value="Enviar" />
+								<span id="msgOk">Mensagem enviada com sucesso!</span>
+								<span id="msgErro">Ocorreu um erro! Tente novamente.</span>
+							</form>
+						</div>
+						-->
+						<!--
+						<div id="guardaInfosContato">
+							<span class="iconPb"></span>
+							<ul>
+								<li><span class=""></span>(11) 982081872</li>
+								<li><span class=""></span><a href="maito:lucasdasilvasoares@hotmail.com">lucasdasilvasoares@hotmail.com</a></li>
+								<li><span class=""></span><a href="http://www.linkedin.com/in/lucasdasilvasoares">linkedin.com/in/lucasdasilvasoares</a></li>
+							</ul>
+						</div>
+						-->
 					</section>
-					-->
-				</div>
-				
-			</div>
-		
-			<div id="guardaLinhaVerde" class="guardaLinhas">
-				<div class="centralizaLinha">					
+				</div>				
+			</div>		
+			<div id="guardaLinhaVerde">
+				<div>					
 					<div id="linhaVerde"></div>
 				</div>
 			</div>
 		</div>
 		<!--
-		<script type="text/javascript" src="prlxScrl.js"></script>
-		<script type="text/javascript" src="scriptGeral.js"></script>
-		 -->
+		<script type="text/javascript" src="./lucasanimador/js/prlxScrl.js"></script>
+		<script type="text/javascript" src="./lucasanimador/js/scriptGeral.js"></script>-->
 	</body>
 </html>
