--- a/index_.html
+++ b/index_.html
@@ -634,6 +634,7 @@
 						<h1>Contato</h1>
 						<div id="guardaFormContato">
 							<form method="POST" action="http://form.lucasanimador.com.br/">
+								<input name="ajax" type="hidden" />
 								<div>
 									<input id="campoNome" name="nomeContato" type="text" />
 								</div>
