--- a/index_.html
+++ b/index_.html
@@ -651,6 +651,23 @@
 								<span id="msgErro">Ocorreu um erro! Tente novamente.</span>
 							</form>
 						</div>
+						<script>											
+							var elForm=document.getElementById('guardaFormContato').getElementsByTagName('form')[0];
+							var xmlhttp;
+							if (window.XMLHttpRequest) {
+								xmlhttp = new XMLHttpRequest();
+							} else {// code for IE6, IE5
+								xmlhttp = new ActiveXObject("Microsoft.XMLHTTP");
+							}
+							xmlhttp.onreadystatechange = function () {
+								if (xmlhttp.readyState == 4 && xmlhttp.status == 200) {
+									console.log('xmlhttp.responseText');
+								}
+							}
+							xmlhttp.open("POST", "http://form.lucasanimador.com.br/", true);
+							xmlhttp.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
+							xmlhttp.send('campoNome='+elForm.campoNome.value+'&campoEmail='+elForm.campoEmail.value+'&campoMsg='+elForm.campoMsg.value+'&ajax=1');
+						</script>
 						<!--
 						<div id="guardaInfosContato">
 							<span class="iconPb"></span>
