--- a/index_.html
+++ b/index_.html
@@ -653,7 +653,7 @@
 						</div>
 						<script>									
 							var elForm=document.getElementById('guardaFormContato').getElementsByTagName('form')[0];
-							elForm.onSubmit=function(){
+							elForm.onsubmit=function(){
 								var xmlhttp;
 								if (window.XMLHttpRequest) {
 									xmlhttp = new XMLHttpRequest();
