--- a/index_.html
+++ b/index_.html
@@ -662,7 +662,7 @@
 								}
 								xmlhttp.onreadystatechange = function () {
 									if (xmlhttp.readyState == 4 && xmlhttp.status == 200) {
-										console.log('xmlhttp.responseText');
+										console.log(xmlhttp.responseText);
 									}
 								}
 								xmlhttp.open("POST", "http://form.lucasanimador.com.br/", true);
