--- a/index_.html
+++ b/index_.html
@@ -667,7 +667,7 @@
 								}
 								xmlhttp.open("POST", "http://form.lucasanimador.com.br/", true);
 								xmlhttp.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
-								xmlhttp.send('campoNome='+elForm.campoNome.value+'&campoEmail='+elForm.campoEmail.value+'&campoMsg='+elForm.campoMsg.value+'&ajax=1');
+								xmlhttp.send('nomeContato='+elForm.nomeContato.value+'&emailContato='+elForm.emailContato.value+'&msgContato='+elForm.msgContato.value+'&ajax=1');
 								return false;
 							};
 						</script>
