--- a/index_.html
+++ b/index_.html
@@ -633,7 +633,7 @@
 					<section id="contato">
 						<h1>Contato</h1>
 						<div id="guardaFormContato">
-							<form method="POST" action="http://form.lucasanimador.com.br/">
+							<form method="POST" action="http://form.lucasanimador.com.br/" target="_blank">
 								<div>
 									<input id="campoNome" name="nomeContato" type="text" />
 								</div>
