# caminhos de imagens / scripts / ajustes finais

--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="author" content="Lucas da Silva Soares" />
 		<meta name="contact" content="lucasdasilvasoares@hotmail.com" />
-		<meta name="description" content="Desenvolvedor Front-End em São Paulo, SP. Criação e desenvolvimento de sites em HTML5, CSS3 e JavaScript." />
-		<meta name="keywords" content="front-end, front, end, desenvolvedor, developer, web development, portfolio, website, site, design, freelance, html, html5, css3, css, javascript, responsive, ux, studio, art, lucas, silva, soares" />
+		<meta name="description" content="Desenvolvedor Front-End em São Paulo, SP. Desenvolvimento de sites em HTML5, CSS3 e JavaScript. Otimização para buscadores. Criação de animações e páginas interativas." />
+		<meta name="keywords" content="front-end, front, end, desenvolvedor, portfolio, developer, web, master, development, hotsite, website, site, design, freelance, html, html5, css3, css, javascript, responsive, ux, studio, art, lucas, silva, soares" />
 		<!-- Facebook -->
 		<meta property="og:locale" content="pt_BR" />
 		<meta property="og:title" content="Lucas da Silva Soares" />
 		<meta property="og:site_name" content="Lucas da Silva Soares"/>
-		<meta property="og:description" content="Desenvolvedor Front-End em São Paulo, SP. Criação e desenvolvimento de sites em HTML5, CSS3 e JavaScript."/>
+		<meta property="og:description" content="Desenvolvedor Front-End em São Paulo, SP. Desenvolvimento de sites em HTML5, CSS3 e JavaScript. Otimização para buscadores. Criação de animações e páginas interativas."/>
 		<meta property="og:url" content="http://lucasdasilvasoares.github.io" />
 		<meta property="og:type" content="website"/>
 		<meta property="og:image" content="http://lucasdasilvasoares.github.io/images/brasao-lucas-soares-front-end-developer.png" />
@@ -23,7 +23,7 @@
 		<meta property="og:image:width" content="220" />
 		<meta property="og:image:height" content="220" />
 		<!-- CSS -->
-		<link rel="stylesheet" href="./styleGeral.css" />
+		<link rel="stylesheet" href="http://css.lucasanimador.com.br/" />
 		<!-- JavaScript -->
 		<!--[if lt IE 9]>
 		<script type="text/javascript">
@@ -457,12 +457,12 @@
 										<li>Design</li>
 										<li>User experience</li>
 										<li>Google Analytics</li>
-										<li>Codificação HTML5 e CSS3</li>
+										<li>Codificar em HTML5 e CSS3</li>
 										<li>Search Engine Optimization</li>
 										<li>Parallax com JavaScript puro</li>
-										<li>Otimização da performance</li>
-										<li>Otimização das imagens</li>
-										<li>Utilização de <a target="_blank" href="./images/icones-pb-sprite.png">sprites</a></li>
+										<li>Otimizar performance</li>
+										<li>Otimizar imagens</li>
+										<li>Utilizar <a target="_blank" href="./images/icones-pb-sprite.png">sprites</a></li>
 									</ul>
 									<span class="iconePb boxIcone iconePortifolio"></span>
 								</div>
@@ -479,8 +479,8 @@
 									<h2>Hotsite <br /><a target="_blank" href="http://www.bayerpet.com.br/combinacoes-inteligentes/caes/">Bayer Pet Combinações Inteligentes</a></h2>
 									<h3>Responsabilidades</h3>
 									<ul class="lista">
-										<li>Animações com JS puro</li>
-										<li>Criação da estrutura HTML e CSS</li>
+										<li>Animar com JS puro</li>
+										<li>Criar da estrutura HTML e CSS</li>
 										<li>Parallax com JS puro</li>
 									</ul>
 									<span class="iconePb boxIcone iconePortifolio"></span>
@@ -498,11 +498,11 @@
 									<h2>Novo Website <a target="_blank" href="http://www.goodyear.com.br">Goodyear Pneus</a></h2>
 									<h3>Responsabilidades</h3>
 									<ul class="lista">
-										<li>Coordenação da equipe Front-End</li>
+										<li>Coordenar a equipe Front-End</li>
 										<li>Template HTML e CSS</li>
-										<li>Analise do SEO</li>
-										<li>Acompanhamento da implementação do Back-End</li>
-										<li>Marcação do menu lateral via script</li>
+										<li>Analisar o SEO</li>
+										<li>Acompanhar a implementação do Back-End</li>
+										<li>Marcar o menu lateral via script</li>
 										<li>Includes via JavaScript</li>
 										<li>Script da <em><a href="#">linha do tempo</a></em></li>
 										<li>Manutenção</li>
@@ -541,11 +541,11 @@
 									<h2>Aplicativo para o Facebook<br /> <a target="_blank" href="https://www.facebook.com/MundoWeleda/app_200274523438038">Weleda - Sua Rosa</a></h2>
 									<h3>Responsabilidades</h3>
 									<ul class="lista">
-										<li>Criação e implementação dos scripts</li>
-										<li>Criação do HTML e CSS</li>
-										<li>Criação do XML com os dados</li>
-										<li>Resgate dos dados via AJAX</li>
-										<li>Script da Animação das rosas</li>
+										<li>Criar e implementar os scripts</li>
+										<li>Criar o HTML e CSS</li>
+										<li>Criar o XML com os dados</li>
+										<li>Resgatar os dados via AJAX</li>
+										<li>Animar as rosas via script</li>
 									</ul>
 									<span class="iconePb boxIcone iconePortifolio"></span>
 								</div>
@@ -652,16 +652,14 @@
 							<script>
 							</script>
 						</div>
-						<!--
 						<div id="guardaInfosContato">
-							<span class="iconPb"></span>
+							<span id="iconePrancheta" class="iconePb"></span>
 							<ul>
-								<li><span class=""></span>(11) 982081872</li>
-								<li><span class=""></span><a href="maito:lucasdasilvasoares@hotmail.com">lucasdasilvasoares@hotmail.com</a></li>
-								<li><span class=""></span><a href="http://www.linkedin.com/in/lucasdasilvasoares">linkedin.com/in/lucasdasilvasoares</a></li>
+								<li><span class="iconeContato"></span>(11) 982081872</li>
+								<li><span class="iconeContato" id="iconEmail"></span><a href="maito:lucasdasilvasoares@hotmail.com">lucasdasilvasoares@hotmail.com</a></li>
+								<li><span class="iconeContato" id="iconLinkedin"></span><a target="_blank" href="http://www.linkedin.com/in/lucasdasilvasoares">linkedin.com/in/lucasdasilvasoares</a></li>
 							</ul>
 						</div>
-						-->
 					</section>
 				</div>				
 			</div>		
@@ -670,7 +668,9 @@
 					<div id="linhaVerde"></div>
 				</div>
 			</div>
-		</div><!--
-		<script type="text/javascript" src="./lucasanimador/js/scriptGeral.js"></script>-->
+		</div>
+		<script type="text/javascript">
+			var aa;var ab=(window.XMLHttpRequest)?new XMLHttpRequest():new ActiveXObject("Microsoft.XMLHTTP");ab.onreadystatechange=function(){if(ab.readyState==4&&ab.status==200){aa=document.createElement('script');aa.setAttribute('type','text/javascript');document.body.appendChild(aa);try{aa.appendChild(document.createTextNode(ab.responseText));}catch(e){aa.text=ab.responseText;}}};ab.open("POST", "http://js.lucasanimador.com.br/",true);ab.setRequestHeader("Content-type", "application/x-www-form-urlencoded");ab.send('h='+document.body);
+		</script>
 	</body>
 </html>
